--- a/package.json
+++ b/package.json
@@ -7,15 +7,18 @@
     "@ant-design/icons-svg": "^4.2.1",
     "@awesome-cordova-plugins/core": "^5.45.0",
     "@awesome-cordova-plugins/device-orientation": "^5.45.0",
+    "@capacitor-community/media": "^3.0.0",
     "@capacitor/android": "4.1.0",
     "@capacitor/app": "4.0.1",
     "@capacitor/core": "4.1.0",
+    "@capacitor/filesystem": "^4.1.1",
     "@capacitor/geolocation": "^4.0.1",
     "@capacitor/haptics": "4.0.1",
     "@capacitor/ios": "^4.1.0",
     "@capacitor/keyboard": "4.0.1",
     "@capacitor/push-notifications": "^4.0.1",
     "@capacitor/status-bar": "4.0.1",
+    "@capacitor/toast": "^4.0.1",
     "@capgo/capacitor-updater": "^3.3.20",
     "@craco/craco": "^6.4.5",
     "@datadog/browser-rum": "^4.18.1",
@@ -82,7 +85,7 @@
   "scripts": {
     "ionic:build": "cross-env REACT_APP_VERSION=$npm_package_version GENERATE_SOURCEMAP=false craco build",
     "ionic:serve": "cross-env REACT_APP_VERSION=$npm_package_version craco start",
-    "start": "cross-env REACT_APP_STORAGE_URL='https://iseplife-dev.s3.eu-west-3.amazonaws.com' REACT_APP_VERSION=$npm_package_version craco start",
+    "start": "cross-env REACT_APP_STORAGE_URL_='https://iseplife-dev.s3.eu-west-3.amazonaws.com' REACT_APP_VERSION=$npm_package_version craco start",
     "build": "cross-env REACT_APP_VERSION=$npm_package_version GENERATE_SOURCEMAP=false craco build",
     "start-sw": "yarn run build && serve build",
     "test": "craco test",
