--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@capacitor/ios": "^4.1.0",
     "@capacitor/keyboard": "4.0.1",
     "@capacitor/push-notifications": "^4.0.1",
+    "@capacitor/share": "^4.1.1",
     "@capacitor/status-bar": "4.0.1",
     "@capacitor/toast": "^4.0.1",
     "@capgo/capacitor-updater": "^3.3.20",
