remove git mirror

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -23,12 +23,12 @@ prebuild:
   script:
     - yarn install
     - yarn run build
-    - node get_git_hash.js > build/version.txt
-    - |
-      cd build
-      zip -r app.zip .
-      cd ../
-    - sh opti_cache.sh
+#    - node get_git_hash.js > build/version.txt
+#    - |
+#      cd build
+#      zip -r app.zip .
+#      cd ../
+#    - sh opti_cache.sh
   artifacts:
     paths:
       - build/
