--- a/android/build.gradle
+++ b/android/build.gradle
@@ -23,7 +23,20 @@ allprojects {
         mavenCentral()
     }
 }
+subprojects {
+   afterEvaluate { project ->
+       if (project.hasProperty('android')) {
+           project.android {
+               if (namespace == null) {
+                   namespace project.group
+               }
+           }
+       }
+   }
+}
 
 task clean(type: Delete) {
     delete rootProject.buildDir
 }
+
+
