--- a/package.json
+++ b/package.json
@@ -8,18 +8,18 @@
     "@awesome-cordova-plugins/core": "^5.45.0",
     "@awesome-cordova-plugins/device-orientation": "^5.45.0",
     "@capacitor-community/media": "^3.0.0",
-    "@capacitor/android": "4.1.0",
-    "@capacitor/app": "4.0.1",
-    "@capacitor/core": "4.1.0",
-    "@capacitor/filesystem": "^4.1.1",
-    "@capacitor/geolocation": "^4.0.1",
-    "@capacitor/haptics": "4.0.1",
-    "@capacitor/ios": "^4.1.0",
-    "@capacitor/keyboard": "4.0.1",
-    "@capacitor/push-notifications": "^4.0.1",
-    "@capacitor/status-bar": "4.0.1",
-    "@capacitor/toast": "^4.0.1",
-    "@capgo/capacitor-updater": "^3.3.20",
+    "@capacitor/android": "^4.0.0",
+    "@capacitor/app": "^4.0.0",
+    "@capacitor/core": "^4.0.0",
+    "@capacitor/filesystem": "^4.0.0",
+    "@capacitor/geolocation": "^4.0.0",
+    "@capacitor/haptics": "^4.0.0",
+    "@capacitor/ios": "^4.0.0",
+    "@capacitor/keyboard": "^4.0.0",
+    "@capacitor/push-notifications": "^4.0.0",
+    "@capacitor/status-bar": "^4.0.0",
+    "@capacitor/toast": "^4.0.0",
+    "@capgo/capacitor-updater": "^5.8.9",
     "@craco/craco": "^6.4.5",
     "@datadog/browser-rum": "^4.18.1",
     "@fingerprintjs/fingerprintjs": "^3.3.3",
@@ -117,7 +117,7 @@
     ]
   },
   "devDependencies": {
-    "@capacitor/cli": "4.1.0",
+    "@capacitor/cli": "^4.0.0",
     "@ionic/cli": "^6.20.1",
     "@tailwindcss/line-clamp": "^0.4.0",
     "@types/leaflet": "^1.7.11",
