--- a/package.json
+++ b/package.json
@@ -7,19 +7,20 @@
     "@ant-design/icons-svg": "^4.2.1",
     "@awesome-cordova-plugins/core": "^5.45.0",
     "@awesome-cordova-plugins/device-orientation": "^5.45.0",
-    "@capacitor-community/media": "^3.0.0",
-    "@capacitor/android": "4.1.0",
-    "@capacitor/app": "4.0.1",
-    "@capacitor/core": "4.1.0",
-    "@capacitor/filesystem": "^4.1.1",
-    "@capacitor/geolocation": "^4.0.1",
-    "@capacitor/haptics": "4.0.1",
-    "@capacitor/ios": "^4.1.0",
-    "@capacitor/keyboard": "4.0.1",
-    "@capacitor/push-notifications": "^4.0.1",
-    "@capacitor/status-bar": "4.0.1",
-    "@capacitor/toast": "^4.0.1",
-    "@capgo/capacitor-updater": "^3.3.20",
+    "@capacitor-community/media": "^5.4.1",
+    "@capacitor/android": "^5.0.0",
+    "@capacitor/app": "^5.0.0",
+    "@capacitor/core": "^5.0.0",
+    "@capacitor/filesystem": "^5.0.0",
+    "@capacitor/geolocation": "^5.0.0",
+    "@capacitor/haptics": "^5.0.0",
+    "@capacitor/ios": "^5.0.0",
+    "@capacitor/keyboard": "^5.0.0",
+    "@capacitor/push-notifications": "^5.0.0",
+    "@capacitor/share": "5",
+    "@capacitor/status-bar": "^5.0.0",
+    "@capacitor/toast": "^5.0.0",
+    "@capgo/capacitor-updater": "^5.8.9",
     "@craco/craco": "^6.4.5",
     "@datadog/browser-rum": "^4.18.1",
     "@fingerprintjs/fingerprintjs": "^3.3.3",
@@ -96,7 +97,8 @@
     "ios-xcode-analyze": "cd ios/App && xcodebuild -scheme App -sdk iphonesimulator15.5 -workspace App.xcworkspace clean analyze",
     "build-android": "cd android && sh gradlew bundleRelease",
     "prebuild-ios": "ionic capacitor build ios --no-open --no-build",
-    "prebuild-android": "ionic capacitor build android --no-open --no-build"
+    "prebuild-android": "ionic capacitor build android --no-open --no-build",
+    "run-android": "ionic capacitor run android --no-build"
   },
   "eslintConfig": {
     "extends": [
@@ -117,8 +119,8 @@
     ]
   },
   "devDependencies": {
-    "@capacitor/cli": "4.1.0",
-    "@ionic/cli": "^6.20.1",
+    "@capacitor/cli": "^5.0.0",
+    "@ionic/cli": "^7.2.0",
     "@tailwindcss/line-clamp": "^0.4.0",
     "@types/leaflet": "^1.7.11",
     "@types/lodash": "^4.14.184",
