--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -1,13 +1,13 @@
 apply plugin: 'com.android.application'
 
 android {
-    namespace "fr.iseplive.iseplife"
+    namespace "com.iseplive.iseplife"
     compileSdkVersion rootProject.ext.compileSdkVersion
     defaultConfig {
-        applicationId "fr.iseplive.iseplife"
+        applicationId "com.iseplive.iseplife"
         minSdkVersion rootProject.ext.minSdkVersion
         targetSdkVersion rootProject.ext.targetSdkVersion
-        versionCode 8
+        versionCode 1
         versionName "1.6"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         aaptOptions {
