--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,6 +21,14 @@ jobs:
         with:
           node-version: '21'
 
+      - name: Cache Yarn
+        uses: actions/cache@v3
+        with:
+          path: |
+            .yarn/
+            yarn.lock.sha256sum
+          key: ${{ runner.os }}-yarn-${{ hashFiles('yarn.lock') }}
+
       - name: Install Dependencies
         run: |
           apk --no-cache add zip
@@ -88,6 +96,14 @@ jobs:
         with:
           node-version: '21'
 
+      - name: Cache Yarn
+        uses: actions/cache@v3
+        with:
+          path: |
+            .yarn/
+            yarn.lock.sha256sum
+          key: ${{ runner.os }}-yarn-${{ hashFiles('yarn.lock') }}
+
       - name: Install Dependencies
         run: |
           yarn set version 3.6.4
@@ -102,8 +118,5 @@ jobs:
           export DD_VERSION=$(yarn run version)-$(cat build/version.txt)
           yarn run upload_datadog_sourcemaps
 
-  cache:
-    key: ${{ runner.os }}-yarn-${{ hashFiles('yarn.lock') }}
-    paths:
-      - .yarn/
-      - yarn.lock.sha256sum
+      - name: Optimize cache
+        run: sh opti_cache.sh
