--- a/package.json
+++ b/package.json
@@ -162,6 +162,5 @@
     "workbox-strategies": "^5.1.4",
     "workbox-streams": "^5.1.4"
   },
-  "description": "iseplife webapp",
-  "packageManager": "yarn@3.2.3"
+  "description": "iseplife webapp"
 }
