--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -56,19 +56,25 @@ jobs:
         run: sh opti_cache.sh
 
       - name: Upload build artifacts
-        uses: actions/upload-artifact@v3
+        uses: actions/upload-artifact@v4
         with:
           name: build
           path: build/
 
-  deploy-dev:
-    name: Deploy to S3 (Development)
+  deploy-s3:
+    name: Deploy to S3
     runs-on: ubuntu-latest
     needs: prebuild
     if: github.ref == 'refs/heads/master'
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
+        
+      - name: Download Artifacts
+        uses: actions/download-artifact@v4
+        with:
+          name: build
+          path: build
 
       - name: Set up AWS credentials
         uses: aws-actions/configure-aws-credentials@v2
@@ -90,6 +96,12 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
+        
+      - name: Download Artifacts
+        uses: actions/download-artifact@v4
+        with:
+          name: build
+          path: build
 
       - name: Set up Node.js
         uses: actions/setup-node@v3
