--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -48,12 +48,6 @@ jobs:
       - name: Save git hash to version.txt
         run: node get_git_hash.js > build/version.txt
 
-      - name: Zip the build directory
-        run: |
-          cd build
-          zip -r app.zip .
-          cd ../
-
       - name: Upload build artifacts
         uses: actions/upload-artifact@v4
         with:
@@ -74,6 +68,13 @@ jobs:
         with:
           name: build
           path: build
+
+      - name: Zip the build directory
+        run: |
+          cd build
+          find . -name "*.map" -type f -delete
+          zip -r app.zip .
+          cd ../
 
       - name: Set up AWS credentials
         uses: aws-actions/configure-aws-credentials@v2
