--- a/package.json
+++ b/package.json
@@ -149,10 +149,19 @@
     "tailwind-scrollbar": "^1.3.1",
     "tailwindcss": "^3.1.6",
     "typescript": "^4.7.4",
+    "web-vitals": "^0.2.4",
+    "workbox-background-sync": "^5.1.4",
+    "workbox-broadcast-update": "^5.1.4",
+    "workbox-cacheable-response": "^5.1.4",
+    "workbox-core": "^5.1.4",
     "workbox-expiration": "^5.1.4",
+    "workbox-google-analytics": "^5.1.4",
+    "workbox-navigation-preload": "^5.1.4",
     "workbox-precaching": "^5.1.4",
+    "workbox-range-requests": "^5.1.4",
     "workbox-routing": "^5.1.4",
-    "workbox-strategies": "^5.1.4"
+    "workbox-strategies": "^5.1.4",
+    "workbox-streams": "^5.1.4"
   },
   "description": "iseplife webapp",
   "packageManager": "yarn@3.6.4"
