--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -55,6 +55,41 @@ jobs:
           include-hidden-files: true
           path: build/
 
+  deploy-s3-pr-preview:
+    name: Deploy to S3 for PR Preview
+    runs-on: ubuntu-latest
+    needs: prebuild
+    if: github.ref == 'refs/heads/master'
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v3
+        
+      - name: Download Artifacts
+        uses: actions/download-artifact@v4
+        with:
+          name: build
+          path: build
+
+      - name: Zip the build directory
+        run: |
+          cd build
+          find . -name "*.map" -type f -delete
+          zip -r app.zip .
+          cd ../
+
+      - name: Set up AWS credentials
+        uses: aws-actions/configure-aws-credentials@v2
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: 'eu-west-3' # Update region if necessary
+
+      - name: Deploy to S3
+        run: |
+          export BRANCH_HASH=$(git rev-parse --abbrev-ref HEAD | md5sum | awk '{print $1}')
+          aws s3 rm s3://iseplife-prod-backup/$BRANCH_HASH --recursive
+          aws s3 cp build/ s3://iseplife-prod-backup/$BRANCH_HASH --recursive
+
   deploy-s3:
     name: Deploy to S3
     runs-on: ubuntu-latest
