--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -59,7 +59,7 @@ jobs:
     name: Deploy to S3 for PR Preview
     runs-on: ubuntu-latest
     needs: prebuild
-    if: github.ref == 'refs/heads/master'
+    if: github.ref != 'refs/heads/master'
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
