--- a/.github/workflows/pr-comment.yml
+++ b/.github/workflows/pr-comment.yml
@@ -2,7 +2,7 @@ name: CI Workflow for PR
 
 on:
   pull_request:
-    types: [opened]
+    types: [opened, reopened]
     branches:
       - master
 
