--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -39,6 +39,7 @@ jobs:
           REACT_APP_HTTP_PROTOCOL: ${{ vars.REACT_APP_HTTP_PROTOCOL }}
           REACT_APP_API_URL: ${{ vars.REACT_APP_PREVIEW_API_URL }}
           REACT_APP_URL: ${{ vars.REACT_APP_PREVIEW_URL }}
+          REACT_APP_STORAGE_URL: ${{ vars.REACT_APP_PREVIEW_STORAGE_URL }}
           REACT_APP_WS_PROTOCOL: ${{ vars.REACT_APP_WS_PROTOCOL }}
           CI: false
         run: yarn run build_with_sourcemap
