--- a/.github/workflows/pr-open.yml
+++ b/.github/workflows/pr-open.yml
@@ -1,15 +1,15 @@
-name: CI Workflow
+name: CI Workflow for PR
 
 on:
-  push:
+  pull_request:
     branches:
       - master
 
 jobs:
-  prebuild:
-    name: Prebuild
+  pr-prebuild:
+    name: PR Prebuild
     runs-on: ubuntu-latest
-    if: github.ref == 'refs/heads/master'
+    if: github.ref != 'refs/heads/master'
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
@@ -37,8 +37,9 @@ jobs:
       - name: Build with sourcemaps
         env:
           REACT_APP_HTTP_PROTOCOL: ${{ vars.REACT_APP_HTTP_PROTOCOL }}
-          REACT_APP_API_URL: ${{ vars.REACT_APP_API_URL }}
-          REACT_APP_URL: ${{ vars.REACT_APP_URL }}
+          REACT_APP_API_URL: ${{ vars.REACT_APP_PREVIEW_API_URL }}
+          REACT_APP_URL: ${{ vars.REACT_APP_PREVIEW_URL }}
+          REACT_APP_STORAGE_URL: ${{ vars.REACT_APP_PREVIEW_STORAGE_URL }}
           REACT_APP_WS_PROTOCOL: ${{ vars.REACT_APP_WS_PROTOCOL }}
           CI: false
         run: yarn run build_with_sourcemap
@@ -52,12 +53,11 @@ jobs:
           name: build
           include-hidden-files: true
           path: build/
-
-  deploy-s3:
-    name: Deploy to S3
+  deploy-s3-pr-preview:
+    name: Deploy to S3 for PR Preview
     runs-on: ubuntu-latest
-    needs: prebuild
-    if: github.ref == 'refs/heads/master'
+    needs: pr-prebuild
+    if: github.ref != 'refs/heads/master'
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
@@ -68,11 +68,10 @@ jobs:
           name: build
           path: build
 
-      - name: Zip the build directory
+      - name: Remove sourcemaps
         run: |
           cd build
           find . -name "*.map" -type f -delete
-          zip -r app.zip .
           cd ../
 
       - name: Set up AWS credentials
@@ -84,50 +83,6 @@ jobs:
 
       - name: Deploy to S3
         run: |
-          aws s3 rm s3://iseplife.fr --recursive
-          aws s3 cp build/ s3://iseplife.fr --recursive
-
-  deploy-datadog:
-    name: Deploy to Datadog
-    runs-on: ubuntu-latest
-    needs: prebuild
-    if: github.ref == 'refs/heads/master'
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
-        
-      - name: Download Artifacts
-        uses: actions/download-artifact@v4
-        with:
-          name: build
-          path: build
-
-      - name: Set up Node.js
-        uses: actions/setup-node@v3
-        with:
-          node-version: '21'
-
-      - name: Enable Corepack
-        run: corepack enable
-
-      - name: Cache Yarn
-        uses: actions/cache@v3
-        with:
-          path: |
-            .yarn/
-            yarn.lock.sha256sum
-          key: ${{ runner.os }}-yarn-${{ hashFiles('yarn.lock') }}
-
-      - name: Install Dependencies
-        run: |
-          echo "nodeLinker: node-modules" >> .yarnrc.yml
-          yarn install
-
-      - name: Upload to Datadog
-        env:
-          DATADOG_API_KEY: ${{ secrets.DATADOG_API_KEY }}
-        run: |
-          export DD_URL=$REACT_APP_URL/static/js
-          export DD_VERSION=$(yarn run version)-$(cat build/version.txt)
-          yarn run upload_datadog_sourcemaps
-
+          export BRANCH_HASH=$(git rev-parse --abbrev-ref HEAD | md5sum | awk '{print $1}')
+          aws s3 rm s3://iseplife-github-prs/$BRANCH_HASH --recursive
+          aws s3 cp build/ s3://iseplife-github-prs/$BRANCH_HASH --recursive
